# aragonite-opendap

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
checkpoints/TAlk_regression/: model.pkl
checkpoints/TCN/salinity/: model_epoch_95.pth
checkpoints/TCN/temperature/: model_epoch_95.pth
config/tcn/: v0.yaml
input_data/: chlor.py  temperature.py
notebooks/DIC_regression/: get_DIC_predictions.ipynb
notebooks/TA_regression/: get_TA_predictions.ipynb
notebooks/TCN/: preprocess.ipynb  validate.ipynb
notebooks/tcn/: preprocess.ipynb
oadap/: utils.py
oadap/prediction/: interpolation.py  modules.py  utils.py
oadap/prediction/tcn/: dataset.py  model.py  utils.py
oadap/prediction/tcn/preprocessing/: __init__.py  climatology.py  neighbors.py  pca.py  sampling.py  windows.py
oadap/providers/: dataframe.py  opendap.py
pipeline/: modules.py  requirements.txt
pipeline/checkpoints/DIC_regression/: model.pkl
scripts/: pipeline.py  run_framework.py
scripts/earthdata/: build_chlor_grid.py  build_sst_grid.py
scripts/regression/: fit_dic.py  fit_talk.py
scripts/tcn/: download_checkpoint.py  find_neighbors.py  preprocess.py  train.py  train_with_config.py
