[build-system]
requires = ["setuptools", "wheel", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "oadap"
version = "0.0.1"
description = "OPeNDAP for 4D Aragonite Predictions in Massachusetts Bay"
authors = ["Beck LaBash <labash.b@northeastern.edu>"]

[tool.mypy]
disable_error_code = ["import-untyped"]

[tool.poetry.dependencies]
python = ">=3.8"
geopandas = {extras = ["all"], version = "^1.0.1"}
GPy = "^1.13.2"
ipykernel = "^6.29.2"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
pandas = "^1.5.3"
PyCO2SYS = "^1.8.3.2"
pydap = "^3.5"
PyKrige = "^1.7.2"
pytorch-tcn = "^1.1.0"
scikit-learn = "^1.4.1.post1"
scipy = "^1.12.0"
seaborn = "^0.13.2"
torch = "^2.4.0"
wandb = "^0.17.5"
joblib = "1.3.2"